* minseglen added to nonparametric Binary Segmentation functions.
* Initialization of candidate log-likelihood values in C is set to -Inf instead of 0.
* Fixed bug whereby if a non-MBIC penalty was use with SegNeigh it errored saying "MBIC not implemented for SegNeigh" this was supposed to be displaying for MBIC penalty only.  Thanks to github user cwenger for spotting this.

Version 2.2.1
=============
* Fixed a minor bug where additional arguments to the plot function when diagnostic=TRUE were not passed through to the plot.
* Changed single.var.norm function to add the mean to the param.est slot when class=TRUE. This was changed previously for multiple changes but single changes were missed.
* Fixed bug in CROPS which was running more iterations of the algorithm than what it said the maximum was.
* Added version number on zoo dependency. Thanks to Gerald Ogola for highlighting the bug.
* Changed plotting function for cpt.range objects.  In v2.2 a bug was introduced which meant the mean lines were not plotted.  Thanks go to Joel Sebold for highlighting this.
* Added BugReports and URL to the Description file.

Version 2.2
=============
* Changed BinSeg and Segneigh to give nice errors when Q=0.
* Added "ths", Thesis advisor to Idris Eckley (RK advisor) and Paul Fearnhead (KH advisor).
* Changed penalties such that with a postfix 0 i.e. SIC0 we DO NOT count the changepoint as a parameter (this was previously SIC) and wihtout a postfix i.e. SIC we count the changepoint as a parameter (this was previously SIC1). This change brings the package in line with some theoretical results and empirical evidence that including the change in parameter estimation is preferred.  This also affects the MBIC definition which now also includes the number of changepoints.
* Fixed minor bug in range_of_penalties code 
* Removed documentation for accessor and replacement functions to improve usability for new users.  Thanks to Hadley Wickham for suggesting this.